--- a/README
+++ b/README
@@ -2,5 +2,4 @@ CREATE
 ====================
 
 Create is a simple tool I use to generate source files from templates.
-
-"!https://secure.travis-ci.org/qwertme/create.png!":http://travis-ci.org/qwertme/create
+[![Build Status](https://secure.travis-ci.org/qwertme/create.png)](http://travis-ci.org/qwertme/create)
